tests/agl/rejections/match/non_exhaustive_with_redundancy.agl
let value = false
case value of
  | false => ()
  | false => ()
